INT-7846: refinement of file picker overflow fix

--- a/less/moodle/filemanager.less
+++ b/less/moodle/filemanager.less
@@ -93,6 +93,16 @@
     overflow: auto;
     height: 415px;
 }
+
+.repository_upload,
+.repository_dropbox,
+.repository_flickr_public,
+.repository_onenote,
+.repository_recent {
+    &.file-picker .fp-content {
+        height: 445px;
+    }
+}
 .filepicker.moodle-dialogue-fullscreen .file-picker .fp-content {
     width: 100%;
 }
